force-app/main/default/objects/RFC_Settings__mdt/RFC_Settings__mdt.object-meta.xml
<CustomObject>
    <label>RFC Setting</label>
    <pluralLabel>RFC Settings</pluralLabel>
</CustomObject>