force-app/main/default/objects/RFC_Settings__mdt/fields/Assignment_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group_Name__c</fullName>
    <label>Assignment Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>