force-app/main/default/objects/RFC_Settings__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ACSS</fullName>
            </value>
            <value>
                <fullName>ACT Automated Audio</fullName>
                <isActive>false</isActive>
                <label>ACT Automated Audio</label>
            </value>
            <value>
                <fullName>ACT Reserved Audio</fullName>
                <isActive>false</isActive>
                <label>ACT Reserved Audio</label>
            </value>
            <value>
                <fullName>ACT Webcast</fullName>
                <isActive>false</isActive>
                <label>ACT Webcast</label>
            </value>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>Adobe - Outlook Toolbar</fullName>
                <isActive>false</isActive>
                <label>Adobe - Outlook Toolbar</label>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>APSXML.DLL</fullName>
            </value>
            <value>
                <fullName>AVS</fullName>
            </value>
            <value>
                <fullName>AXIS</fullName>
            </value>
            <value>
                <fullName>BOB (Audio)</fullName>
            </value>
            <value>
                <fullName>Branding Editor</fullName>
            </value>
            <value>
                <fullName>Call Manager</fullName>
            </value>
            <value>
                <fullName>CES</fullName>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>Cloud Loader</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Direct Number Room</fullName>
                <isActive>false</isActive>
                <label>Direct Number Room</label>
            </value>
            <value>
                <fullName>Event Conferencing</fullName>
                <isActive>false</isActive>
                <label>Event Conferencing</label>
            </value>
            <value>
                <fullName>Event Conferencing - Greeted Entry</fullName>
            </value>
            <value>
                <fullName>Event Conferencing - Greeted Entry Connection</fullName>
                <isActive>false</isActive>
                <label>Event Conferencing - Greeted Entry Connection</label>
            </value>
            <value>
                <fullName>Event Conferencing - Passcode Entry</fullName>
            </value>
            <value>
                <fullName>Event Conferencing - Slide Assist</fullName>
                <isActive>false</isActive>
                <label>Event Conferencing - Slide Assist</label>
            </value>
            <value>
                <fullName>Event Portal</fullName>
            </value>
            <value>
                <fullName>GlobalMeet</fullName>
                <isActive>false</isActive>
                <label>GlobalMeet</label>
            </value>
            <value>
                <fullName>GlobalMeet.com</fullName>
            </value>
            <value>
                <fullName>GlobalMeet - Admin Portal (Conf. HUB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>