force-app/main/default/objects/RFC_Settings__mdt/fields/Product_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Name__c</fullName>
    <label>Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>